Assembler/tests/ok/spaces_dont_break_commas.asm

ADS R10, R11 ,R12

ADS R10 , R11,R12
